--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,22 @@
 			<version>2.5.0</version>
 		</dependency>
 
+
+		<!-- https://mvnrepository.com/artifact/redis.clients/jedis redis相关配置 -->
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-pool2  redis相关配置-->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-pool2</artifactId>
+			<version>2.4.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
