新加简单集成rabbitmq

--- a/pom.xml
+++ b/pom.xml
@@ -21,11 +21,23 @@
 	</properties>
 
 	<dependencies>
+	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-amqp</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+		
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis-reactive</artifactId>
@@ -112,7 +124,8 @@
 		</dependency>
 
 
-		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-pool2  redis相关配置-->
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-pool2 
+			redis相关配置 -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-pool2</artifactId>
