--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,16 @@
 redisAddr: 129.28.159.43
 redisPassword: 123456
 redisPort: 6379
+
+#rabbitmq配置
+spring:
+   rabbitmq:
+      host: 127.0.0.1
+      port: 5672
+      username: admin
+      password: 123456
+      publisher-confirms: true #  消息发送到交换机确认机制,是否确认回调
+      publisher-returns: true
+   devtools:
+      restart:
+         enabled: false
