编写水表逻辑之前的最完整的版本提交，接下来提交版本为，编写水表逻辑

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,8 +7,8 @@ spring:
    rabbitmq:
       host: 129.28.159.43
       port: 5672
-      username: admin
-      password: admin
+      username: xdo
+      password: 123456
       publisher-confirms: true #  消息发送到交换机确认机制,是否确认回调
       publisher-returns: true
    devtools:
