--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/qs_iot?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/qs_iot?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=root
 #mybatis.typeAliasesPackage=com.cml.springcloud.common.entity
 mybatis.mapperLocations=classpath:mapper/*.xml
 
